tests/baselines/reference/exportSameNameFuncVar.errors.txt
==== tests/cases/compiler/exportSameNameFuncVar.ts (1 errors) ====
    export var a = 10;
    export function a() {
                    ~
!!! error TS2000: Duplicate identifier 'a'.
    }